Move build specific parameters to properties file

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,2 +1,7 @@
+marklogic.host=isearch
+marklogic.port=8100
+marklogic.user=admin
+marklogic.password=admin
+
 logging.level.root=WARN
 logging.level.com.marklogic.spring.batch=DEBUG
