--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 repositories {
-  mavenCentral()
+  jcenter()
   maven { url "http://repo.spring.io/milestone" }
   maven { url "http://developer.marklogic.com/maven2/" }
 }
@@ -28,11 +28,14 @@ dependencies {
   compile "org.springframework:spring-core:4.2.0.RC3"
   
   compile "com.marklogic:java-client-api:3.0.3"
+  compile "com.marklogic:ml-javaclient-util:2.5"
   compile "org.springframework.boot:spring-boot-starter-web"
   compile "org.springframework.boot:spring-boot-starter-batch"  
-  compile "org.projectlombok:lombok:1.16.6"
-  testCompile "junit:junit"
   
+  testCompile "junit:junit"
+  testCompile "com.marklogic:ml-junit:2.5"
+  testCompile "com.jayway.restassured:rest-assured:2.3.1"	
+  testCompile "org.springframework.boot:spring-boot-starter-test:1.3.1.RELEASE"
   
 }
 
