--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
   testCompile "com.marklogic:ml-junit:2.5"
   testCompile "com.jayway.restassured:rest-assured:2.3.1"	
   testCompile "org.springframework.boot:spring-boot-starter-test:1.3.1.RELEASE"
-  
+  testCompile "org.springframework.batch:spring-batch-test"  
 }
 
 sourceSets.test.resources.srcDir 'src/test/java'
