--- a/build.gradle
+++ b/build.gradle
@@ -25,17 +25,17 @@ repositories {
 
 dependencies {
   compile "org.springframework.batch:spring-batch-core:3.0.6.RELEASE"
-  compile "org.springframework:spring-core:4.2.0.RC3"
+  compile "org.springframework.batch:spring-batch-test:3.0.6.RELEASE"
+  compile "org.springframework.batch:spring-batch-samples:2.2.7.RELEASE"
   
+  compile "org.springframework:spring-core:4.2.0.RC3"
+
   compile "com.marklogic:java-client-api:3.0.3"
   compile "com.marklogic:ml-javaclient-util:2.5"
-  compile "org.springframework.boot:spring-boot-starter-web"
-  compile "org.springframework.boot:spring-boot-starter-batch"  
   
   testCompile "junit:junit"
   testCompile "com.marklogic:ml-junit:2.5"
-  testCompile "com.jayway.restassured:rest-assured:2.3.1"	
-  testCompile "org.springframework.boot:spring-boot-starter-test:1.3.1.RELEASE"
+  testCompile "com.jayway.restassured:rest-assured:2.3.1"
   
 }
 
