--- a/gradle.properties
+++ b/gradle.properties
@@ -61,4 +61,4 @@ mlContentForestsPerHost=1
 # rest-admin,read,rest-admin,update,rest-extension-user,execute. You can easily override those by setting the 
 # mlModulePermissions property, as shown below. This example simply adds rest-reader/read to the set of permissions,
 # but you can customize these to be whatever you would like.
-mlModulePermissions=rest-admin,read,rest-admin,update,rest-extension-user,execute,rest-reader,read
+# mlModulePermissions=rest-admin,read,rest-admin,update,rest-extension-user,execute,rest-reader,read
