--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,7 +1,14 @@
+# IDENTITY (ContextIdApplicationContextInitializer)
+spring.application.name=spring-batch
+
 marklogic.host=faa
-marklogic.port=8400
-marklogic.user=admin
-marklogic.password=admin
+
+marklogic.spring-batch.database=spring-batch-content
+marklogic.spring-batch.port=8200
+marklogic.spring-batch.user=spring-batch-admin
+marklogic.spring-batch.password=password
+
+marklogic.application.port=8400
 
 logging.level.root=WARN
 logging.level.com.marklogic.spring.batch=DEBUG
