Reader/writer for deleting URIs

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,5 +1,5 @@
-marklogic.host=faa
-marklogic.port=8100
+marklogic.host=localhost
+marklogic.port=8000
 marklogic.user=admin
 marklogic.password=admin
 
