#7 Example of reading from an HSQL database and writing to MarkLogic

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-mlHost=faa
+mlHost=localhost
 
 # The name of this application; this will be used for creating a number of resources, such as databases and appservers
 mlAppName=spring-batch
@@ -16,7 +16,7 @@ mlTestRestPort=8201
 # resources such as users and roles. You can then use app-specific users for mlRestAdminUsername, mlManageUsername, etc.
 #
 # Otherwise, this is typically an application user. In sample-project, this user is used for running JUnit tests.
-mlUsername=spring-batch-user
+mlUsername=spring-batch-test
 mlPassword=password
 
 
