--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,15 @@ dependencies {
   testCompile "com.marklogic:ml-junit:2.5"
 
   testCompile "com.jayway.restassured:rest-assured:2.3.1"
-  testCompile "org.springframework.batch:spring-batch-test" 
+  testCompile "org.springframework.batch:spring-batch-test"
   
+  // For testing SQL readers
+  testCompile "org.springframework:spring-jdbc:4.2.0.RC3"
+  testCompile "org.hsqldb:hsqldb:2.3.3"
+  
+  // For tests that write objects as XML
+  testCompile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.6.3"
+  testRuntime "org.codehaus.woodstox:woodstox-core-asl:4.4.1"
 }
 
 sourceSets.test.resources.srcDir 'src/test/java'
