--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,5 @@
-buildscript {
-    repositories {
-        jcenter()
-        maven { url "http://repo.spring.io/snapshot" }
-        maven { url "http://repo.spring.io/milestone" }
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.6.RELEASE")
-    }
-}
-
 plugins {
-  id "com.marklogic.ml-gradle" version "2.0rc5" 
+  id "com.marklogic.ml-gradle" version "2.0" 
   id "java"
   id "eclipse"
 }
@@ -27,14 +16,13 @@ repositories {
 
 dependencies {
   compile "org.springframework.batch:spring-batch-core:3.0.6.RELEASE"
-  compile "org.springframework.batch:spring-batch-test:3.0.6.RELEASE"
-  compile "org.springframework.batch:spring-batch-samples:2.2.7.RELEASE"
-  
   compile "org.springframework:spring-core:4.2.0.RC3"
-
-  compile "com.marklogic:java-client-api:3.0.3"
+  //compile "com.marklogic:java-client-api:3.0.3"
   compile "com.marklogic:ml-javaclient-util:2.5"
   
+  testCompile "org.springframework.batch:spring-batch-test:3.0.6.RELEASE"
+  testCompile "org.springframework.batch:spring-batch-samples:2.2.7.RELEASE"
+
   testCompile "junit:junit"
   testCompile "com.marklogic:ml-junit:2.5"
 
@@ -47,7 +35,7 @@ dependencies {
   
   // For tests that write objects as XML
   testCompile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.6.3"
-  testRuntime "org.codehaus.woodstox:woodstox-core-asl:4.4.1"
+  testRuntime "org.codehaus.woodstox:woodstox-core-asl:4.4.1" 
 }
 
 sourceSets.test.resources.srcDir 'src/test/java'
