--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 plugins {
   id "com.marklogic.ml-gradle" version "2.0" 
+  id "maven-publish"
   id "java"
   id "eclipse"
+  id "com.jfrog.bintray" version "1.5"
 }
 
 sourceCompatibility = 1.7
@@ -16,8 +18,10 @@ repositories {
 
 dependencies {
   compile "org.springframework.batch:spring-batch-core:3.0.6.RELEASE"
-  compile "org.springframework:spring-core:4.2.0.RC3"
+  compile "org.springframework:spring-core:4.2.1.RELEASE"
+  compile "org.springframework:spring-jdbc:4.2.1.RELEASE"
   compile "com.marklogic:ml-javaclient-util:2.5"
+  compile "commons-cli:commons-cli:1.3.1"
   
   testCompile "org.springframework.batch:spring-batch-test:3.0.6.RELEASE"
   testCompile "org.springframework.batch:spring-batch-samples:2.2.7.RELEASE"
@@ -38,3 +42,40 @@ dependencies {
 }
 
 sourceSets.test.resources.srcDir 'src/test/java'
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+  classifier 'sources' 
+  from sourceSets.main.allJava
+}
+
+publishing {
+  publications {
+    mainJava(MavenPublication) {
+      from components.java
+      artifactId "data-migrator"
+    }
+    sourcesJava(MavenPublication) {
+      from components.java
+      artifactId "data-migrator-sources"
+      artifact sourcesJar
+    }
+  }
+}
+ 
+if (project.hasProperty("myBintrayUser")) {
+  bintray {
+    user = myBintrayUser
+    key = myBintrayKey
+    publications = ['mainJava', 'sourcesJava']
+    pkg {
+      repo = 'maven'
+      name = "data-migrator"
+      licenses = ['Apache-2.0']
+      vcsUrl = 'https://github.com/sastafford/marklogic-spring-batch.git'
+      version {
+        name = "0.1"
+        released = new Date()
+      }
+    }
+  }
+}
