--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,11 @@ dependencies {
   compile "org.springframework.batch:spring-batch-core:3.0.6.RELEASE"
   compile "org.springframework:spring-core:4.2.1.RELEASE"
   compile "org.springframework:spring-jdbc:4.2.1.RELEASE"
-  compile "com.marklogic:ml-javaclient-util:2.5"
+  compile("com.marklogic:ml-javaclient-util:2.5") {
+  	exclude group: 'com.marklogic.java-client', module: 'client-api-java'
+  }
   compile "commons-cli:commons-cli:1.3.1"
+  compile fileTree(include: ['*.jar'], dir: 'lib')
   
   testCompile "org.springframework.batch:spring-batch-test:3.0.6.RELEASE"
   testCompile "org.springframework.batch:spring-batch-samples:2.2.7.RELEASE"
