Load Triples use case for RDF - reader, writer and migrator added

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=com.marklogic
 version=0.1
 
 # Configuration for the test app
-mlHost=localhost
+mlHost=192.168.1.7
 mlAppName=spring-batch
 mlRestPort=8200
 mlTestRestPort=8201
