--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,10 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-  jcenter()
-  maven { url "http://repo.spring.io/milestone" }
-  maven { url "http://developer.marklogic.com/maven2/" }
+    mavenLocal()
+    jcenter()
+    maven { url "http://repo.spring.io/milestone" }
+    maven { url "http://developer.marklogic.com/maven2/" }
 }
 
 
@@ -21,7 +22,7 @@ dependencies {
   compile "org.springframework:spring-core:4.2.6.RELEASE"
   compile "org.springframework:spring-jdbc:4.2.6.RELEASE"
   compile "org.springframework:spring-oxm:4.2.6.RELEASE"
-  compile("com.marklogic:ml-javaclient-util:2.5") {
+  compile("com.marklogic:ml-javaclient-util:2.9.0") {
   	exclude group: 'com.marklogic.java-client', module: 'client-api-java'
   }
   compile "commons-cli:commons-cli:1.3.1"
@@ -31,7 +32,7 @@ dependencies {
   testCompile "org.springframework.batch:spring-batch-samples:2.2.7.RELEASE"
 
   testCompile "junit:junit"
-  testCompile "com.marklogic:ml-junit:2.5"
+  testCompile "com.marklogic:ml-junit:2.6.0"
 
   testCompile "com.jayway.restassured:rest-assured:2.3.1"
   testCompile "org.springframework.batch:spring-batch-test"
