--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Publishing configuration
-name=data-migrator
+artifact=marklogic-spring-batch
 group=com.marklogic
-version=0.1
+version=0.2.4-alpha
 
 # Configuration for the test app
 mlHost=localhost
