--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Publishing configuration
-artifact=marklogic-spring-batch
 group=com.marklogic
-version=0.2.4-alpha
+extensionsArtifact=marklogic-spring-batch
+extensionsVersion=0.2.4-alpha
 
 # Configuration for the test app
 mlHost=localhost
