Change up classpath and dependencies on two projects

--- a/core/gradle.properties
+++ b/core/gradle.properties
@@ -6,7 +6,7 @@ jobsArtifact=marklogic-spring-batch-jobs
 jobsVersion=extensionsVersion
 
 # Configuration for the test app
-mlHost=localhost
+mlHost=oscar
 mlAppName=spring-batch
 mlRestPort=8200
 mlTestRestPort=8201
