--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,15 +17,14 @@ dependencies {
   	  exclude group: 'com.marklogic.java-client', module: 'client-api-java'
     }
     compile "commons-cli:commons-cli:1.3.1"
-  
-    testCompile "org.springframework.batch:spring-batch-test:3.0.6.RELEASE"
+
     testCompile "org.springframework.batch:spring-batch-samples:2.2.7.RELEASE"
 
     testCompile "junit:junit"
-    testCompile "com.marklogic:ml-junit:2.5"
+    testCompile "com.marklogic:ml-junit:2.6.0"
 
     testCompile "com.jayway.restassured:rest-assured:2.3.1"
-    testCompile "org.springframework.batch:spring-batch-test"
+    testCompile "org.springframework.batch:spring-batch-test:3.+"
   
     // For testing SQL readers
     testCompile "org.springframework:spring-jdbc:4.2.0.RC3"
