--- a/jobs/build.gradle
+++ b/jobs/build.gradle
@@ -3,6 +3,19 @@ plugins {
     id "maven-publish"
 }
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'lib')
+    compile "com.marklogic:marklogic-spring-batch:0.+"
+
+    testCompile "com.marklogic:ml-junit:2.6.0"
+    testCompile "org.springframework.batch:spring-batch-test:3.+"
+}
+
+sourceSets.test.resources.srcDir 'src/test/java'
+
 publishing {
     publications {
         jobs(MavenPublication) {
