Set mlHost to localhost

--- a/core/gradle.properties
+++ b/core/gradle.properties
@@ -6,7 +6,7 @@ jobsArtifact=marklogic-spring-batch-jobs
 jobsVersion=extensionsVersion
 
 # Configuration for the test app
-mlHost=oscar
+mlHost=localhost
 mlAppName=spring-batch
 mlRestPort=8200
 mlTestRestPort=8201
