--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Configuration for the MarkLogic JobRepository
-mlHost=oscar
+mlHost=localhost
 mlAppName=spring-batch
 mlRestPort=8200
 mlTestRestPort=8201
