--- a/jobs/gradle.properties
+++ b/jobs/gradle.properties
@@ -4,7 +4,7 @@ jobsArtifact=marklogic-spring-batch-jobs
 jobsVersion=0.2.4-alpha
 
 # Configuration for the MarkLogic JobRepository
-mlHost=oscar
+mlHost=localhost
 mlAppName=spring-batch
 mlRestPort=8200
 mlTestRestPort=8201
