--- a/core/gradle.properties
+++ b/core/gradle.properties
@@ -1,9 +1,7 @@
 # Publishing configuration
 group=com.marklogic
-extensionsArtifact=marklogic-spring-batch
-extensionsVersion=0.2.4-alpha
-jobsArtifact=marklogic-spring-batch-jobs
-jobsVersion=extensionsVersion
+coreArtifact=marklogic-spring-batch
+coreVersion=0.3
 
 # Configuration for the test app
 mlHost=localhost
