--- a/jobs/gradle.properties
+++ b/jobs/gradle.properties
@@ -1,7 +1,7 @@
 # Publishing configuration
 group=com.marklogic
 jobsArtifact=marklogic-spring-batch-jobs
-jobsVersion=0.2.4-alpha
+jobsVersion=0.3
 
 # Configuration for the MarkLogic JobRepository
 mlHost=localhost
