--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=com.marklogic
 version=0.1
 
 # Configuration for the test app
-mlHost=192.168.1.7
+mlHost=localhost
 mlAppName=spring-batch
 mlRestPort=8200
 mlTestRestPort=8201
