--- a/jobs/build.gradle
+++ b/jobs/build.gradle
@@ -8,7 +8,7 @@ targetCompatibility = 1.8
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'lib')
-    compile "com.marklogic:marklogic-spring-batch:0.+"
+    compile "com.marklogic:marklogic-spring-batch:0.3"
 
     testCompile "com.marklogic:ml-junit:2.6.0"
     testCompile "org.springframework.batch:spring-batch-test:3.+"
