--- a/core/build.gradle
+++ b/core/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     }
 
     compile "commons-cli:commons-cli:1.3.1"
+    compile "com.marklogic:ml-app-deployer:2.2.0"
 
     testCompile "org.springframework.batch:spring-batch-samples:2.2.7.RELEASE"
 
