--- a/core/build.gradle
+++ b/core/build.gradle
@@ -37,7 +37,11 @@ dependencies {
         exclude(group: 'ch.qos.logback')
     }
 
+    // TODO Remove this in favor of just using jopt
     compile "commons-cli:commons-cli:1.3.1"
+
+    // For the CLI
+    compile "net.sf.jopt-simple:jopt-simple:5.0.1"
 
     testCompile "org.springframework.batch:spring-batch-samples:2.2.7.RELEASE"
 
