--- a/examples/mysql-sakila/build.gradle
+++ b/examples/mysql-sakila/build.gradle
@@ -6,11 +6,12 @@ plugins {
 repositories {
     jcenter()
     mavenLocal()
+    maven {url "https://dl.bintray.com/sastafford/maven/"}
 }
 
 dependencies {
-    compile "com.marklogic:marklogic-spring-batch:DEV"
-    runtime "com.marklogic:marklogic-spring-batch-jobs:DEV"
+    compile "com.marklogic:marklogic-spring-batch:0.3.1"
+    runtime "com.marklogic:marklogic-spring-batch-jobs:0.3.1"
     runtime "mysql:mysql-connector-java:5.1.6"
 }
 
