76 Using one app server and database that also supports the JobRepo

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,10 +2,18 @@ plugins {
     id "com.jfrog.bintray" version "1.6"
     id "maven-publish"
     id "application"
+    id "com.marklogic.ml-gradle" version "2.2.0"
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+ext {
+    mlAppConfig {
+        modulePaths = ["src/test/ml-modules"]
+        createTriggersDatabase = false
+    }
+}
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'lib')
@@ -63,14 +71,18 @@ sourceSets.test.resources.srcDir 'src/test/java'
 task deployMarkLogicJobRepository(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     main = 'com.marklogic.spring.batch.Main'
-    args = ["deployJobRepo", "--jrHost", mlHost, "--jrPort", mlRestPort, "--jrUsername", mlAdminUsername, "--jrPassword", mlAdminPassword, "--config", "null"]
+    args = ["deployJobRepo", "--jrName", mlJobRepositoryName, "--jrHost", mlHost, "--jrPort", mlRestPort, "--jrUsername", mlManageUsername, "--jrPassword", mlManagePassword, "--config", "null"]
 }
 
 task undeployMarkLogicJobRepository(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     main = 'com.marklogic.spring.batch.Main'
-    args = ["undeployJobRepo", "--jrHost", mlHost, "--jrPort", mlRestPort, "--jrUsername", mlAdminUsername, "--jrPassword", mlAdminPassword, "--config", "null"]
+    args = ["undeployJobRepo", "--jrName", mlJobRepositoryName, "--jrHost", mlHost, "--jrPort", mlRestPort, "--jrUsername", mlManageUsername, "--jrPassword", mlManagePassword, "--config", "null"]
 }
+
+// Setup the Job Repo in our test application so it's available for use by tests.
+mlPostDeploy.dependsOn deployMarkLogicJobRepository
+mlUndeploy.dependsOn undeployMarkLogicJobRepository
 
 mainClassName = "com.marklogic.spring.batch.Main"
 
