--- a/core/gradle.properties
+++ b/core/gradle.properties
@@ -4,15 +4,14 @@ coreArtifact=marklogic-spring-batch
 coreVersion=0.3.1
 
 # Configuration for the test app
+# Both core and jobs tests are run against this application
 mlHost=localhost
-mlAppName=spring-batch
+mlAppName=marklogic-spring-batch-test
+mlJobRepositoryName=marklogic-spring-batch-test
 mlRestPort=8200
-mlUsername=spring-batch-test
-mlPassword=password
-mlRestAdminUsername=spring-batch-admin
-mlRestAdminPassword=password
+mlUsername=admin
+mlPassword=admin
 mlManageUsername=admin
 mlManagePassword=admin
-mlAdminUsername=admin
-mlAdminPassword=admin
+mlConfigDir=src/test/ml-config
 mlContentForestsPerHost=1
