Add checkstyle configuration and plugin

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,15 @@ allprojects {
     task wrapper(type: Wrapper) {
         gradleVersion = '2.13'
     }
+}
 
+subprojects {
+    apply plugin: "checkstyle"
+
+    checkstyle {
+        configFile = file("${project.rootDir}/config/checkstyle/checkstyle.xml")
+        toolVersion = '6.19'
+    }
 }
 
 project(':jobs') {
