Added writer and processor to process SQLXML data to file system

--- a/core/gradle.properties
+++ b/core/gradle.properties
@@ -5,7 +5,7 @@ coreVersion=0.3.1
 
 # Configuration for the test app
 # Both core and jobs tests are run against this application
-mlHost=localhost
+mlHost=192.168.1.10
 mlAppName=marklogic-spring-batch-test
 mlJobRepositoryName=marklogic-spring-batch-test
 mlRestPort=8200
