--- a/core/build.gradle
+++ b/core/build.gradle
@@ -57,7 +57,8 @@ dependencies {
         exclude(group: 'log4j')
         exclude(group: 'ch.qos.logback')
     }
-
+	// Used to convert XML to json
+	compile('org.json:json:20160212')
     // TODO Remove this in favor of just using jopt
     compile "commons-cli:commons-cli:1.3.1"
     compile "com.marklogic:ml-app-deployer:2.2.0"
