Add vcs tag for bintray upload

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -118,6 +118,7 @@ bintray {
         version {
             name = coreVersion
             released = new Date()
+            vcsTag = coreVersion
         }
     }
 }
