--- a/jobs/build.gradle
+++ b/jobs/build.gradle
@@ -48,6 +48,7 @@ bintray {
         version {
             name = jobsVersion
             released = new Date()
+            vcsTag = jobsVersion
         }
     }
 }
