Add maven publish block for testing jobs

--- a/jobs/build.gradle
+++ b/jobs/build.gradle
@@ -40,6 +40,12 @@ publishing {
             version jobsVersion
             from components.java
         }
+        jobsTest(MavenPublication) {
+            groupId group
+            artifactId jobsArtifact + "-test"
+            version jobsVersion
+            artifact testJar
+        }
     }
 }
 
