Add test jar to jobs, add sources jar to core and job

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -110,7 +110,7 @@ publishing {
         }
         sourcesJava(MavenPublication) {
             groupId group
-            artifactId coreArtifact + "-sources"
+            artifactId coreArtifact
             version coreVersion
             artifact sourcesJar
         }
