Check for gradle properties for bintrayUser and bintrayApiKey

--- a/jobs/build.gradle
+++ b/jobs/build.gradle
@@ -63,9 +63,9 @@ publishing {
 }
 
 bintray {
-    user = System.getenv('BINTRAY_USER')
-    key = System.getenv('BINTRAY_KEY')
-    publications = ['jobs','sourcesJava', 'testJava']
+    user =  project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_KEY')
+    publications = ['jobs','sourcesJava']
     pkg {
         repo = 'maven'
         name = jobsArtifact
