--- a/jobs/build.gradle
+++ b/jobs/build.gradle
@@ -9,7 +9,6 @@ targetCompatibility = 1.8
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'lib')
-    compile "com.marklogic:marklogic-spring-batch:0.4.0"
     testCompile "com.marklogic:ml-junit:2.6.0"
     testCompile "org.springframework.batch:spring-batch-test:3.+"
 
@@ -35,8 +34,15 @@ task testJar(type: Jar, dependsOn: testClasses) {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
+    baseName = "marklogic-spring-batch-jobs"
+    version = jobsVersion
     classifier = 'sources'
     from sourceSets.main.allSource
+}
+
+jar {
+    baseName = "marklogic-spring-batch-jobs"
+    version = jobsVersion
 }
 
 publishing {
@@ -47,25 +53,17 @@ publishing {
             version jobsVersion
             from components.java
         }
-        sourcesJava(MavenPublication) {
-            groupId group
-            artifactId jobsArtifact
-            version jobsVersion
-            artifact sourcesJar
-        }
-        testJava(MavenPublication) {
-            groupId group
-            artifactId jobsArtifact
-            version jobsVersion
-            artifact testJar
-        }
     }
 }
 
 bintray {
     user =  project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
     key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_KEY')
-    publications = ['jobs','sourcesJava']
+    publications = ['jobs']
+    filesSpec {
+        from 'build/libs/marklogic-spring-batch-jobs'
+        into 'com/marklogic/marklogic-spring-batch-jobs/' + jobsVersion
+    }
     pkg {
         repo = 'maven'
         name = jobsArtifact
