Rearranging common test code to one package

--- a/build.gradle
+++ b/build.gradle
@@ -21,5 +21,6 @@ allprojects {
 project(':jobs') {
     dependencies {
         compile project(':core')
+        compile project(':test')
     }
 }
