Fix test project dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,9 @@ project(':jobs') {
         compile project(':test')
     }
 }
+
+project(':test') {
+    dependencies {
+        compile project(':core')
+    }
+}
