Confirm that sources.jar gets created when main jar is created

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -101,6 +101,8 @@ jar {
     version = coreVersion
 }
 
+jar.dependsOn sourcesJar
+
 // Setup the Job Repo in our test application so it's available for use by tests.
 mlPostDeploy.dependsOn deployMarkLogicJobRepository
 mlUndeploy.dependsOn undeployMarkLogicJobRepository
