--- a/jobs/build.gradle
+++ b/jobs/build.gradle
@@ -36,6 +36,8 @@ jar {
     version = jobsVersion
 }
 
+jar.dependsOn sourcesJar
+
 publishing {
     publications {
         jobs(MavenPublication) {
