--- a/jobs/build.gradle
+++ b/jobs/build.gradle
@@ -54,7 +54,7 @@ bintray {
     key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_KEY')
     publications = ['jobs']
     filesSpec {
-        from 'build/libs/marklogic-spring-batch-jobs'
+        from 'build/libs'
         into 'com/marklogic/marklogic-spring-batch-jobs/' + jobsVersion
     }
     pkg {
