--- a/test/build.gradle
+++ b/test/build.gradle
@@ -9,7 +9,6 @@ dependencies {
     compile "com.marklogic:ml-junit:2.6.0"
 }
 
-
 task sourcesJar(type: Jar, dependsOn: classes) {
     baseName = "marklogic-spring-batch-test"
     version = testVersion
@@ -22,7 +21,6 @@ jar {
     version = testVersion
 }
 
-jar.dependsOn sourcesJar
 
 publishing {
     publications {
@@ -31,18 +29,15 @@ publishing {
             artifactId testArtifact
             version testVersion
             from components.java
+            artifact sourcesJar
         }
     }
 }
 
 bintray {
-    user = System.getenv('BINTRAY_USER')
-    key = System.getenv('BINTRAY_KEY')
+    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_KEY')
     publications = ['test']
-    filesSpec {
-        from 'build/libs'
-        into 'com/marklogic/marklogic-spring-batch-test/' + testVersion
-    }
     pkg {
         repo = 'maven'
         name = testArtifact
