--- a/examples/mysql-sakila/build.gradle
+++ b/examples/mysql-sakila/build.gradle
@@ -39,12 +39,12 @@ task migrateActors(type: JavaExec) {
         "--port", mlRestPort,
         "--username", mlUsername,
         "--password", mlPassword,
-        "--jdbcDriver", "com.mysql.jdbc.Driver",
-        "--jdbcUrl", "jdbc:mysql://localhost:3306/sakila",
-        "--jdbcUsername", "root",
-        "--jdbcPassword", "admin",
+        "--jdbc_driver", "com.mysql.jdbc.Driver",
+        "--jdbc_url", "jdbc:mysql://localhost:3306/sakila",
+        "--jdbc_username", "root",
+        "--jdbc_password", "admin",
         "--sql", actorsSql,
-        "--rootLocalName", "actor"
+        "--root_local_name", "actor"
     ]
 }
 
@@ -57,12 +57,12 @@ task migrateFilmsWithActors(type: JavaExec) {
         "--port", mlRestPort,
         "--username", mlUsername,
         "--password", mlPassword,
-        "--jdbcDriver", "com.mysql.jdbc.Driver",
-        "--jdbcUrl", "jdbc:mysql://localhost:3306/sakila",
-        "--jdbcUsername", "root",
-        "--jdbcPassword", "admin",
+        "--jdbc_driver", "com.mysql.jdbc.Driver",
+        "--jdbc_url", "jdbc:mysql://localhost:3306/sakila",
+        "--jdbc_username", "root",
+        "--jdbc_password", "admin",
         "--sql", filmsWithActorsSql,
-        "--rootLocalName", "actor"
+        "--root_local_name", "actor"
     ]
 }
 
