Reset host back to localhost

--- a/examples/geonames/gradle.properties
+++ b/examples/geonames/gradle.properties
@@ -1,4 +1,4 @@
-mlHost=oscar
+mlHost=localhost
 mlAppName=marklogic-spring-batch-test
 mlJobRepositoryName=marklogic-spring-batch-test
 mlRestPort=8200
